@@ -115,6 +115,10 @@ Rearranged the README sections in an effort to make it more readable.
 Fix samples/tk.perl to use C<$poe_main_window> instead of the older
 C<$poe_tk_main_window>.  I'm surprised this was overlooked so long.
 
+Eliminated spurous CHLD signals generated by Sys::Hostname.
+
+Reduced the amount of time some tests take to run on fast systems.
+
 
 0.1205 2001.02.12
 -----------------
